--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -50,18 +50,18 @@
     justify-content: center;
     align-items: center;
 
-    cursor: pointer;
-
     top: 0;
     right: 0;
     transform: translate(-8px, 8px);
 
     width: 30px;
     height: 30px;
+    padding: 0;
 
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 
+    cursor: pointer;
     background-color: transparent;
 
     transition-property: fill;
