--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -740,12 +740,18 @@ a {
   transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
-.product,
 .button--secondary {
   -webkit-transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow;
   transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow;
   transition: box-shadow, background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
   transition: box-shadow, background 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow;
+}
+
+.product {
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
 .button--primary,
