--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -3,9 +3,12 @@ a {
   transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
-.product,
 .button--secondary {
   transition: box-shadow, background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.product {
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
 .button--primary,
