--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
-body {
-  background-color: #ffffff;
-  color: #757575;
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.03em;
-}
-
-.main-nav, .contacts-list, .card-set, .member-cards, .social-list, .clients-list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.main-nav__link, .contacts-list__link, .logo {
-  text-decoration: none;
-}
-
-.header__nav, .main-nav,
-.contacts-list--vertical, .social-list, .clients-list, .client, .modal__close-icon, .form-order__field-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.footer__text,
-.sub-form__text {
-  display: block;
-  margin-bottom: 20px;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -49,6 +6,9 @@ Document
 /**
 Use a better box model (opinionated).
 */
+@import url(https://fonts.googleapis.com);
+@import url(https://fonts.gstatic.com);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
 *,
 ::before,
 ::after {
@@ -311,6 +271,48 @@ summary {
   width: 1px;
   height: 1px;
   margin: -1px;
+}
+
+body {
+  background-color: #ffffff;
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
+}
+
+.main-nav, .contacts-list, .card-set, .member-cards, .social-list, .clients-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main-nav__link, .contacts-list__link, .logo {
+  text-decoration: none;
+}
+
+.header__nav, .main-nav,
+.contacts-list--vertical, .social-list, .clients-list, .client, .modal__close-icon, .form-order__field-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer__text,
+.sub-form__text {
+  display: block;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .container {
