--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,34 +24,34 @@
 .main-nav {
   @extend %list;
 
-  &__link--current {
-    position: relative;
+  &__link {
+    @extend %link;
+    color: $secondary-text-color;
 
-    &::after {
-      position: absolute;
+    &--current {
+      position: relative;
+      color: $accent;
 
-      content: '';
-      bottom: 0;
-      left: 0;
-      height: 4px;
-      width: 100%;
+      &::after {
+        position: absolute;
 
-      border-radius: 2px;
-      background-color: $accent;
+        content: '';
+        bottom: 0;
+        left: 0;
+        height: 4px;
+        width: 100%;
+
+        border-radius: 2px;
+        background-color: $accent;
+      }
     }
   }
 
-  &__link--current,
   &__link:hover,
   &__link:focus {
     color: $accent;
     fill: $accent;
   }
-}
-
-.main-nav__link {
-  @extend %link;
-  color: $secondary-text-color;
 }
 
 .contacts-list {
