--- a/css/main.css
+++ b/css/main.css
@@ -931,6 +931,7 @@ body {
 }
 
 .modal__button--primary {
+  margin-top: 30px;
   padding: 10px 55px;
   font-weight: 700;
   font-size: 16px;
@@ -992,6 +993,10 @@ body {
   margin-bottom: 10px;
 }
 
+.form-order__field--last {
+  margin-bottom: 0;
+}
+
 .form-order__field-icon {
   position: absolute;
   bottom: 0;
@@ -1033,8 +1038,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
-  margin-top: 20px;
-  margin-bottom: 30px;
   width: 425px;
 }
 
@@ -1059,6 +1062,7 @@ body {
   resize: none;
   max-height: 120px;
   padding: 12px 16px;
+  margin-bottom: 20px;
   outline: none;
   font-size: 12px;
   line-height: 1.17;
